--- a/wp-content/themes/woo-angular/src/index.html
+++ b/wp-content/themes/woo-angular/src/index.html
@@ -2,9 +2,11 @@
 <html>
 <head>
     <meta charset="utf=8">
-    <title>Woo-Angular.com</title>
+    <title>Wp-Woo-Angular Template</title>
     <base href="/">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
 <body>
     <app-root>Loading...</app-root>
